--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -184,7 +184,7 @@ Mechanic.",
   author  = "D L Darmofal and K Siu",
   journal = "Journal of Computational Physics",
   volume  = "151",
-  pages   = "728–756",
+  pages   = "728-756",
   year    = "1999",
   }
 
@@ -225,6 +225,7 @@ Mechanic.",
   author  = "S LeMartelot and B Nkonga and R Saurel",
   journal = "Journal of Computational Physics",
   volume  = "255",
+  pages   = "53-82",
   year    = "2013",
   }
 
